tests/neg-custom-args/captures/cc1.scala
object Test:

  def f[A <: Matchable @retains(*)](x: A): Matchable = x // error

